--- a/109590031_HW3-1/109590031_HW3-1/app/src/main/res/values/strings.xml
+++ b/109590031_HW3-1/109590031_HW3-1/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@ See the License for the specific language governing permissions and
 limitations under the License. -->
 
 <resources>
-    <string name="app_name">Scrolling Text</string>
+    <string name="app_name"> 109590031_HW3–1 </string>
     <string name="article_title">Beatles Anthology Vol. 1</string>
 
     <string name="article_subtitle">Behind That Locked Door: Beatles Rarities!</string>
